--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+
     <meta charset="utf-8" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logoZaparkowani.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoZaparkowani.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,32 +25,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Free Modern React Templates &amp; Components for building landing pages and UIs - Treact</title>
+    <title>Zaparkowani</title>
     <meta
       name="description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Miejsca parkingowe dostępne w każdym mieście wojewódzkim. Możliwość wynajęcia parkingu naziemnego, garażu podziemnego i innych miejsc parkingowych. Parkuj w każdym mieście w Polsce!"
     />
-    <meta property="og:site_name" content="Treact" />
-    <meta property="og:title" content="Free Modern React Templates and Components for Building Landing Pages" />
-    <meta
-      property="og:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
-    />
-    <meta
-      property="og:image"
-      content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss.png"
-    />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@owaiswiz" />
-    <meta name="twitter:creator" content="@owaiswiz" />
-    <meta name="twitter:title" content="Free Modern React Templates and Components for Building Landing Pages" />
-    <meta
-      name="twitter:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
-    />
-    <meta name="twitter:image"
-    content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
