--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
    // Default ad_storage to 'denied'.
    gtag('consent', 'default', {
-     'ad_storage': 'denied'
+     'ad_storage': 'denied',
      'functionality_storage': 'denied'
    });
  </script>
